<resources>
    <string name="plugin_name">Better Battery Stats</string>
    <string name="message_hint">Scheduled Toast</string>
    <string name="message_hint_saveref">Save a Custom Reference</string>
    <string name="message_hint_savestat">Save a Text Dumpfile</string>
    <string name="message_hint_savestatjson">Save a JSON Dumpfile</string>
    <string name="message_hint_sinceref">Dump Since last Reference</string>
    <string name="message_hint_stat_type">Stat Type</string>
    <string name="message_enable_root">Enabling root features assumes that your phone is rooted.\nPlease make sure to grant su rights to Alarms and Network stats.\nIf those rights do not stick blame the su app, not BBS.\nContinue?</string>
    <string name="message_enable_active_mon">Active monitoring results in an overhead in terms of wakeups and processing and should be used with care.\nContinue?</string>
    <string name="message_first_launch">A reference \'unplugged\' is being created now. When you plug/unplug your phone this reference will be overwritten</string>
    <string name="message_copied_to_clipboard">%s was copied to the clipboard</string>
    <string name="message_no_hist_froyo">Unfortunately Froyo does not support history data</string>
    <string name="message_no_appops">AppOps does not exist on your ROM</string>
    <string name="message_external_storage_write_error">External Storage can not be written</string>
    <string name="message_error_writing_dumpfile">An error occured while dumping the history</string>
    <string name="message_identical_references">An error occurred. Both stats are identical (%1$1, %2$s)</string>
    <string name="message_watchdog_processing">BBS: Watchdog processing...</string>
    <string name="message_watchdog_awake_alert">BBS: Awake alert: %1$d%% awake</string>
    <string name="message_computing">Computing...</string>
    <string name="message_awake_alert">Awake alert</string>
    <string name="message_awake_info">%1$d%% awake while screen off</string>
    <string name="message_no_fileman_error">Please install OI FileManager</string>
    <string name="app_name">BetterBatteryStats</string>
    <string name="app_welcome">Welcome to %s</string>
    <string name="app_pname">com.asksven.betterbatterystats</string>
    <string name="label_button_remind">Remind me later</string>
    <string name="label_button_rate">Rate</string>
    <string name="label_button_no_thanks">No, thanks</string>
    <string name="label_button_recovery">Download Recovery ZIP</string>
    <string name="text_dialog_rate">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="label_stat_type">Stat type</string>
    <string name="label_since">Since</string>
    <string name="label_fallback_stat_type">Fallback stat type</string>
    <string name="label_title">Title</string>
    <string name="label_author">Author</string>
    <string name="label_license">License</string>
    <string name="label_import_export_prefs">Import/Export Preferences from/to %s</string>
    <string name="label_import_prefs">Import</string>
    <string name="label_export_prefs">Export</string>
    <string name="label_hist_time">Time</string>
	<string name="label_hist_battery">Bat</string>
	<string name="label_hist_power">Chrg</string>
	<string name="label_hist_screen">Scr</string>
	<string name="label_hist_wakelock">WL</string>
	<string name="label_hist_wifi">Wifi</string>
	<string name="label_hist_gps">GPS</string>
	<string name="label_hist_bluetooth">BT</string>
	<string name="label_hist_incall">Call</string>
	<string name="label_hist_scanning">Scan</string>
	<string name="label_graph_battery">Battery</string>
	<string name="label_graph_power">Charging</string>
	<string name="label_graph_screen">Screen On</string>
	<string name="label_graph_wakelock">Wakelock</string>
	<string name="label_graph_wifi">Wifi</string>
	<string name="label_graph_gps">GPS</string>
	<string name="label_graph_bluetooth">Bluetooth</string>
	<string name="label_graph_incall">In Call</string>
	<string name="label_graph_scanning">Scanning</string>
	<string name="label_widget_deep_sleep">Deep Sleep</string>
	<string name="label_widget_since">Since</string>
	<string name="label_widget_awake">Awake</string>
	<string name="label_widget_screen_on">Screen on</string>
	<string name="label_widget_kernel_wakelock">KWL</string>
	<string name="label_widget_partial_wakelock">PWL</string>
	<string name="label_widget_deep_sleep_short">DS</string>
	<string name="label_widget_awake_short">Aw</string>
	<string name="label_widget_screen_on_short">Scr</string>
	<string name="label_widget_kernel_wakelock_short">KWL</string>
	<string name="label_widget_partial_wakelock_short">PWL</string>
	<string name="label_battery">Battery</string>
	<string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_package_name">Package Name</string>
    <string name="label_on_on_android_4_3plus">Only available on Android 4.3+</string>
    <string name="label_permisions_dangerous">Permission marked as \'dangerous\'</string>
    <string name="label_permisions_system">Permissions for \'system apps\'</string>
    <string name="label_permisions_normal">Normal permissions</string>
    <string name="pref_dashclock_default_stat_type_summary">Set the stat type to be shown in dashclock</string>
    <string name="pref_dashclock_fallback_stat_type_summary">Set the fallback stat type to be shown in the dashclock if the primary one has no reference</string>
    <string name="label_awake_abbrev">aw.</string>
    <string name="label_button_share">Share to...</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_application_settings">Application Settings</string>
    <string name="label_button_appops">App Ops</string>
    <string name="title_share_dialog">Share data as...</string>
    <string name="share_dialog_edit_title">Note</string>
    <string name="text_since">Since</string>
    <string name="label_preferences">Settings</string>
    <string name="label_packageinfo">Package Info</string>
    <string name="label_graphs">Graphs</string>
    <string name="label_moregraphs">More Graphs</string>
    <string name="label_series">History</string>
    <string name="label_raw_stats">Raw Stats</string>
    <string name="label_about">About</string>
    <string name="label_credits">Credits</string>
    <string name="label_help">Help</string>
    <string name="label_howto">How-To</string>
    <string name="label_system_app">System App</string>
    <string name="label_import_export">Import/Export</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_share">Share</string>
    <string name="label_custom_ref">Set Custom Ref.</string>
    <string name="label_release_notes">Release Notes</string>
    <string name="label_legend">Legend</string>
    <string name="label_button_yes">Yes</string>
    <string name="label_button_no">No</string>
    <string name="label_button_ok">OK</string>
    <string name="label_tab_package">Package</string>
    <string name="label_tab_permissions">Permissions</string>
    <string name="label_tab_services">Services</string>
    <string name="label_about_author">By asksven</string>
    <string name="label_about_courtesy">Graphics by Javi</string>
    <string name="label_about_translations">Translations</string>
    <string name="label_about_translation1">Russian by gaich @ xda</string>
    <string name="label_about_translation2">Spanish by @vldesco</string>
    <string name="label_about_translation3">Italian by code010101 @ xda</string>
    <string name="label_about_translation4">Croatian by seky2205 @ xda</string>
    <string name="label_about_translation5">French by xavihernandez @ xda</string>
    <string name="label_about_translation6">German by Minty123 @ xda</string>
    <string name="label_about_follow">Follow me on Twitter</string>
    <string name="label_about_rate">Rate / Review on Google Play</string>
    <string name="label_theme_dark">Dark</string>
    <string name="label_theme_light">Light</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Switch themes</string>
    <string name="expl_system_app">On Android 4.4 Google removed the permission for normal apps to access battery stats.\n\nIt is recommended to install BetterBatteryStats as a system app (this does not prevent from installing updates).\n\nUninstalling/reinstalling it as a system app may be required if permissions change.</string>
    <string name="expl_system_app_workaround">If the in-app install fails please use this workaround</string>
    <string name="install_system_app">Install as system app</string>
    <string name="uninstall_system_app">Uninstall system app</string>
    <string name="info_installed_system_app">Installed system app. Please reboot to activate.</string>
    <string name="info_uninstalled_system_app">Uninstalled system app: your preferences have been reset. Please reboot to clean up and update your preferences.</string>
    <string name="info_succeeded">Succeeded</string>
    <string name="info_failed">Failed, try recovery ZIP</string>
    <string name="info_root_required">In order to use this feature the app must have root permissions</string>
    <string name="info_unknown_state">Error: could not resolve what changed</string>
    <string name="info_service_connection_error">BatteryInfo Service could not be contacted</string>
    <string name="info_loading_refs_error">Selected \'from\' or \'to\' reference could not be loaded. Please refresh</string>
    <string name="info_unknown_stat_error">An unknown error occured while retrieving stats. Please check your logcat</string>
    <string name="pref_debug_logging_summary">Add debug info to logcat</string>
    <string name="pref_debug_logging_title">Debug</string>
    <string name="pref_files_to_private_storage_summary">Write files to /sdcard/Android/data/com.asksven.betterbatterystats/files/Download</string>
    <string name="pref_files_to_private_storage_title">Private storage</string>
    <string name="pref_ignore_system_app_summary">Ignore System App detection (for XPosed Module \'Enable BATTERY_STATS\' users)</string>
    <string name="pref_ignore_system_app_title">Do not detect system app</string>
    <string name="pref_select_dir_summary">Select where to write dumpfiles</string>
    <string name="pref_select_dir_title">Select Output Directory</string>
    <string name="pref_developer_title">Enable while charging</string>
    <string name="pref_developer_summary">Enable stats while charging (at your own risk, stats may be inconsistent)</string>
    <string name="pref_auto_refresh_title">Auto refresh</string>
    <string name="pref_auto_refresh_summary">Automatically reload \'current\' when switching screens/settings</string>
    <string name="pref_section_sharing">Sharing options</string>
    <string name="pref_save_logcat_title">Logcat</string>
    <string name="pref_save_logcat_summary">Share logcat</string>
    <string name="pref_save_dmesg_title">dmesg</string>
    <string name="pref_save_dmesg_summary">Share dmesg</string>
    <string name="pref_force_alarms_api_title">Alarms using API</string>
    <string name="pref_force_alarms_api_summary">Force to retrieve Alarms using the API</string>
    <string name="pref_force_kwl_api_title">Kernel Wakelocks using API</string>
    <string name="pref_force_kwl_api_summary">Force to retrieve Kernel Wakelocks using the API</string>
    <string name="pref_force_network_api_title">Network Stats using API</string>
    <string name="pref_force_network_api_summary">Force to retrieve Network Stats using the API</string>
    <string name="pref_screen_import_export_title">Import/Export</string>
    <string name="pref_screen_import_export_summary">Import and Export Preferences</string>
</resources>