<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar_icon" />

    <!-- do not translate: strings are set in SystemAppActivity -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_import_export_prefs"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button
            android:id="@+id/buttonExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/label_export_prefs" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonExport"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/label_import_prefs" />

    </RelativeLayout>

</LinearLayout>